syntax = "proto3";

package api.config;

option go_package = "github.com/meshtrade/api/go/config";

/*
The active environment in which an application is running.
*/
enum Environment {
  UNDEFINED_ENVIRONMENT = 0;
  LOCAL_ENVIRONMENT = 1;
  DEVELOPMENT_ENVIRONMENT = 2;
  TESTING_ENVIRONMENT = 3;
  STAGING_ENVIRONMENT = 4;
  PRODUCTION_ENVIRONMENT = 5;
}
